test/scc/pp/errors/047.a
047.t:1:2: error: #elif without #if